# vendec

./: Cargo.toml  README.md  flake.nix
crates/libva/: Cargo.toml
crates/libva-sys/: Cargo.toml  gen.sh
crates/libva-sys/src/: bindings.rs  lib.rs
crates/libva/src/: buffer.rs  config.rs  context.rs  display.rs  error.rs  image.rs  lib.rs  library.rs  surface.rs
crates/simple-vaapi/: Cargo.toml
crates/simple-vaapi/src/: main.rs
crates/vendec/: Cargo.toml
crates/vendec/src/: lib.rs
crates/vendec/src/vaapi/: mod.rs
examples/: vkvideo.rs
src/: lib.rs
src/vulkan/: buffer.rs  command_buffer.rs  common.rs  device.rs  encoder.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  queue.rs
