[package]
name = "vendec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
ash = "0.38.0"
async-executor = "1.13.1"
backtrace = "0.3.74"
env_logger = "0.11.6"
futures-lite = "2.6.0"
image = "0.25.5"
log = "0.4.25"
thiserror = "1"

[profile.dev]
opt-level = 1

[lints.clippy]
too_many_arguments = "allow"
